# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import accountsRouter from "./accounts";
 import categoriesRouter from "./categories";
 import transactionsRouter from "./transactions";
+import creditCardsRouter from "./credit-cards";
 import monthlyPlansRouter from "./monthly-plans";
 import assetsRouter from "./assets";
 import budgetRouter from "./budget";
@@ -15,6 +16,7 @@ router.use(healthRouter);
 router.use(accountsRouter);
 router.use(categoriesRouter);
 router.use(transactionsRouter);
+router.use(creditCardsRouter);
 router.use(monthlyPlansRouter);
 router.use(assetsRouter);
 router.use(budgetRouter);
